--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hbs": "^4.2.0",
     "knex": "^1.0.3",
     "pg": "^8.7.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "wavesurfer.js": "^6.0.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.21"
